# dlt_dbt_hubspot

./: .gitignore  Makefile  README.md  hubspot_pipeline.py  pyproject.toml
.dlt/: config.toml
dbt_hubspot/: .gitignore  dbt_project.yml
dbt_hubspot/macros/: extract_columns_from_vars.sql  merge_labels_to_properties.sql
dbt_hubspot/models/marts/: dim_hubspot__company.sql  dim_hubspot__contact.sql  dim_hubspot__deal.sql  props.yaml
dbt_hubspot/models/staging/: src_all.yml  stg_hubspot__companies.sql  stg_hubspot__contacts.sql  stg_hubspot__deals.sql
hubspot/: __init__.py  helpers.py  settings.py  utils.py
